prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/rangeloop3.diag.txt
ERROR: expected 'expression'
testData/diagnostics/rangeloop3.nut.txt:3:5

for (:a, b) {
     ^
    println("ERROR loop 3")


